tests/baselines/reference/stringLiteralsWithSwitchStatements02.errors.txt
tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements02.ts(8,5): error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements02.ts(13,5): error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.


==== tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements02.ts (2 errors) ====
    let x: "foo";
    let y: "foo" | "bar";
    
    let b: boolean;
    b = x == y;
    b = "foo" == y
    b = y == "foo";
    b = "foo" == "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    
    b = x != y;
    b = "foo" != y
    b = y != "foo";
    b = "foo" != "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    
    